[package]
name = "wrkviz"
version = "0.0.7"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
plotters = { version = "0.3", default_features = false, features = [ "svg_backend", "bitmap_backend", "bitmap_encoder", "chrono", "ttf", "image", "all_series", "all_elements"] }
csaps = "0.3"
itertools = "0.10"
clap = { version = "3", features = [ "derive" ] }
self_update = { version = "0.28.0", default_features = false, features = [ "rustls", "archive-tar", "compression-flate2" ] }
